<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_gray"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/naites_logo"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_card_bg"
            android:padding="24dp"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_registration"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/editFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Full name"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:hint="@string/full_name"
                android:background="@drawable/rounded_corner"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email address"
                android:hint="@string/email_address"
                android:background="@drawable/rounded_corner"
                android:padding="10dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/dark_blue"
                    android:layout_marginTop="15dp"
                    android:text="@string/level"
                    />
                <Spinner
                    android:id="@+id/spinnerAcademicLevel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginTop="12dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:layout_marginTop="12dp"
                android:text="@string/pick_your_interests"
                />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                app:singleSelection="false"
                app:selectionRequired="false"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/dark_blue"
                android:textColor="@android:color/white" />

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>