<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExamTip">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_exam_tips"
                android:layout_gravity="center_horizontal"
                app:tint="@color/dark_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:text="@string/add_exam_tip"
                />
            <EditText
                android:id="@+id/tipTitleEditText"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/black_cursor"
                android:hint="@string/tip_title"
                android:textColorHint="@color/gray"
                android:background="@drawable/edit_text_bg" />
            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:autofillHints="postalAddress"
                android:hint="@string/explain_tip"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/black_cursor" />

            <EditText
                android:id="@+id/tagsEditText"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/black_cursor"
                android:hint="@string/tip_tags"
                android:textColorHint="@color/gray"
                android:background="@drawable/edit_text_bg" />
            <Button
                android:layout_height="65dp"
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_blue"
                android:textSize="9pt"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>