<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="50dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/naites_logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/login_label"
                android:text="@string/login_welcome"
                android:layout_marginStart="15dp"
                android:textColor="@color/purple_700"
                android:textSize="20pt"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/login_subtitle"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:textSize="10pt"
                android:textColor="@color/black"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/email_address"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="#CCCC"
                app:errorEnabled="true"
                android:textColorHint="#AFAFAF"
                android:hint="@string/email_address">
                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/rounded_corner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:id="@+id/username_field"
                    android:drawableStart="@drawable/user_circle_24"
                    app:drawableTint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:placeholderText="@string/password_field"
                app:passwordToggleEnabled="true"
                android:hint="@string/password_field"
                android:textColorHint="#AFAFAF"
                app:hintTextColor="#CCCC"
                app:passwordToggleTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/rounded_corner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="15dp"
                    android:textSize="10pt"
                    android:textColor="@color/black"
                    android:id="@+id/password_field"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_padlock"
                    app:drawableTint="@color/black"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:id="@+id/forget_password"
                    android:text="@string/forget_password"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:id="@+id/btnRegister"
                    android:text="@string/create_account"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <Button
                android:layout_height="65dp"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/white"
                android:text="@string/login_btbTxt"
                android:textAllCaps="false"
                android:backgroundTint="@color/dark_blue"
                android:textSize="9pt"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>