<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamsTips">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tips_layout"
            android:paddingTop="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_exam_tips"
                android:layout_gravity="center_horizontal"
                app:tint="@color/dark_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/exam_tips"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="8dp"
                android:text="@string/select_interest"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tags_chip_group"
                android:layout_width="match_parent"
                app:singleSelection="false"
                app:selectionRequired="false"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginTop="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:id="@+id/getTags"
                android:text="@string/get_tips"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTips"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>